[project]
name = "claude2api"
version = "0.1.0"
description = "Reverse proxy for Claude web version to API output"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "tiktoken>=0.7.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
]